<resources>
    <string name="app_name">Settings</string>
    <string name="setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="audio_profiles">Audio profile</string>
    <string name="wifi">WLAN</string>
    <string name="data_usage">Data usage</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sensor">Sensor</string>
    <string name="ptt">PTT talk</string>
    <string name="display">Display</string>
    <string name="light">Light</string>
    <string name="security_and_password">Security and password</string>
    <string name="date_time">Data &amp; time</string>
    <string name="language">Language</string>
    <string name="about_bike">About bike</string>
    <string name="unbind_bike">Unbind bike</string>
    <string name="input_box_title">Lesports</string>
    <string name="data_on">On</string>
    <string name="data_off">Off</string>
    <string name="data_of_the_rest">Residual flow of this month</string>
    <string name="data_of_use">The use of this month</string>
    <string name="lockscreen_password">Lock screen password</string>
    <string name="lockscreen_password_tip">Need to enter a password or fingerprint</string>
    <string name="lockscreen_password_tip_no_fingerprint">Need to enter a password</string>
    <string name="password_manager">Password setting</string>
    <string name="fingerprint_manager">Fingerprint manager</string>
    <string name="password_input">Enter password</string>
    <string name="password_input_check_new">Verify new password</string>
    <string name="password_not_match">Password is not consistent, please re-enter</string>
    <string name="password_wrong">Password is wrong, please re-enter</string>
    <string name="password_set_success">Password set successfully</string>
    <string name="password_close">Disable password</string>
    <string name="password_verify">Password verify</string>
    <string name="fp_manager">Fingerprint manager</string>
    <string name="fp_add_fp">Add fingerprint</string>
    <string name="fp_del_fp">Are you sure to delete fingerprint ?</string>
    <string name="fp_enroll_tip">Please pick up and drop your finger again and again until the completion of the 100% entry</string>
    <string name="fp_enroll_tip2">The fingerprint has been added \n you can use the fingerprint to unlock the super bike</string>
    <string name="fp_fp1">Fingerprint 1</string>
    <string name="fp_fp2">Fingerprint 2</string>
    <string name="fp_fp3">Fingerprint 3</string>
    <string name="fp_fp4">Fingerprint 4</string>
    <string name="fp_fp5">Fingerprint 5</string>
    <string name="password_keyboard_0">0</string>
    <string name="password_keyboard_1">1</string>
    <string name="password_keyboard_2">2</string>
    <string name="password_keyboard_3">3</string>
    <string name="password_keyboard_4">4</string>
    <string name="password_keyboard_5">5</string>
    <string name="password_keyboard_6">6</string>
    <string name="password_keyboard_7">7</string>
    <string name="password_keyboard_8">8</string>
    <string name="password_keyboard_9">9</string>
    <string name="wifi_please_open">Turn on WLAN to see available network</string>
    <string name="wifi_current_select">Current connection:</string>
    <string name="wifi_candidate">Select network</string>
    <string name="wifi_on">On</string>
    <string name="wifi_oning">Wlan is turning on ......</string>
    <string name="wifi_off">Off</string>
    <string name="wifi_offing">Wlan is turning off ......</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_show_password">Display</string>
    <string name="wifi_input_password">Enter password</string>
    <string name="ptt_please_open">Turn on PTT to choose intercom channel</string>
    <string name="ptt_channel_select">Current channel:</string>
    <string name="ptt_channel">Channel</string>
    <string name="ptt_on">On</string>
    <string name="ptt_off">Off</string>
    <string name="audio">Audio profile</string>
    <string name="ringtone">Ringtone</string>
    <string name="music">Music</string>
    <string name="display_title">Display</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_autio_adjust">Automatic brightness</string>
    <string name="save_mode">Power saving mode</string>
    <string name="save_mode_detail">Automatically lock screen after 1 minute without operation in non riding condition</string>
    <string name="date_time_title">Date &amp; time</string>
    <string name="auto_set_date_time">Automatic date &amp; time</string>
    <string name="auto_set_date_time_detail">Use network-provided time</string>
    <string name="auto_set_timezone">Automatic time zone</string>
    <string name="auto_set_timezone_detail">Use network-provided time zone</string>
    <string name="manual_set_date">Set date</string>
    <string name="manual_set_time">Set time</string>
    <string name="manual_set_timezone">Set time zone</string>
    <string name="cancel_date">Cancel</string>
    <string name="finish_date">OK</string>
    <string name="timezone_set">Time zone setting</string>
    <string name="no_date_dispaly">Please set date</string>
    <string name="no_time_display">Please set time</string>
    <string name="no_timezone_display">Please set time zone</string>
    <string name="year">/</string>
    <string name="month">/</string>
    <string name="day">" "</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="charge_only">Charge only</string>
    <string name="media_charge">Media and charge</string>
    <string name="ring_default">Opening (default)</string>
    <string name="ring_wave">Waves</string>
    <string name="ring_beacon">Beacon</string>
    <string name="ring_blink">Twinkle</string>
    <string name="ring_knock">Tapping</string>
    <string name="about_help">Help</string>
    <string name="help_q01">Q&#038;A</string>
    <string name="help_q02">如何联系客服？</string>
    <string name="help_a1">拨打电话1010-9000。</string>
    <string name="help_q2">如何进行系统升级？</string>
    <string name="help_a2">请保持联网状态，若有新的版本，系统会自动提醒您进行升级。
        您也可以手动在设置-关于自行车-系统版本中进行新版本检索和升级，
        在升级过程中请保证您的自行车有足够的电量</string>
    <string name="help_q3">忘记自行车密码怎么办？</string>
    <string name="help_a3">请牢记自己设定的自行车密码，如果真的忘记，请联系我们的客服寻求帮助</string>
    <string name="help_q4">我应该在骑行状态时使用智能功能吗？</string>
    <string name="help_a4">为了您的安全，请切勿在骑行中操作自行车的智能功能，请停下车来使用这些功能</string>
    <string name="help_q5">为什么心率检测有时候有显示有时候没显示？</string>
    <string name="help_a5">心率检测需要手握住30-60秒才能显示，且需静止时才有效。
        心率传感器是通过容易受到静电、肌肉电、震动、电磁干扰等影响，可能会时有失灵情况。</string>
    <string name="help_q6">为什么自行车耗电很快？</string>
    <string name="help_a6">智能自行车有很多传感器，相应的也有较大的电量消耗，
        我们也会在后续版本中优化电量消耗，请随时更新系统</string>
    <string name="help_q7">为什么磨电花鼓有时候无法充电？</string>
    <string name="help_a7">Shimano前轮发电花鼓,电机额定功率为6V 3W，在骑行时可正常充电，磨电花鼓工作时的实际发电功率跟骑行速度相关，骑行速度在20-30km/h，方可达到额定充电功率。
        大部分骑行时间磨电花鼓充电功率低，因此其仅可作为辅助充电方法，充电主要靠外接充电线充电。</string>
    <string name="help_q8">如何添加收听本地音乐？</string>
    <string name="help_a8">通过数据线连接，把mp3格式音乐拷贝到自行车sd卡的music文件夹中，就可以收听对应离线音乐。</string>
    <string name="help_q9">指纹识别如何使用，为何有时指纹录入失败?</string>
    <string name="help_a9">需要首先设置安全密码，才能使用指纹识别快速解锁功能。指纹需要多次按压才能完成录入指纹，
        使用时，请保持手指干燥，按照提示轻轻按压指纹区域。</string>
    <string name="help_q10">为什么没有车撑子和挡泥板？</string>
    <string name="help_a10">为减轻重量，标配无支架和挡泥板，高端自行车一般都是如此。如有需要可自行配置</string>
    <string name="help_q11">自行车PTT对讲的功能，可否通过调频实现与其它手台或对讲机对讲？</string>
    <string name="help_a11">可以。将其他手台将频率调至自行车所设置的频点时即可对讲</string>
    <string name="help_q12">超级自行车是否可以更换其他SIM卡？</string>
    <string name="help_a12">超级自行车已经为您配备定制的SIM卡，提供定向流量，卡机绑定，请勿更换卡，
        后续的版本中，我们还将为您提供流量充值等功能，敬请期待</string>
    <string name="help_q13">历史骑行数据会丢失或覆盖吗？</string>
    <string name="help_a13">我们的骑行数据存储于乐视云服务器中，只要不删除就不会丢失</string>
    <string name="help_q14">没电的情况下还能骑行吗？</string>
    <string name="help_a14">若电子锁没有锁定，可以正常骑行。但如果您的电子锁处于锁定状态，需要先充电，才能解除电子锁的锁定并骑行</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">English</string>
    <string name="tos_home_title">Terms of use</string>
    <string name="tos_item_1">Terms of service</string>
    <string name="tos_item_2">Privacy policy</string>
</resources>