<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="17dp" 
        android:orientation="vertical" >

        <TextView
            style="@style/help_style_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/help_q01" />

        <TextView
            style="@style/help_style_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.7dp"
            android:text="@string/help_q02" />

        <TextView
            style="@style/help_style_a"
            android:text="@string/help_a1" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q2" />

        <TextView
            style="@style/help_style_a"
            android:text="@string/help_a2" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q3" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a3" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q4" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a4" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q5" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a5" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q6" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a6" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q7" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a7" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q8" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a8" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q9" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a9" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q10" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a10" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q11" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a11" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q12" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a12" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q13" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a13" />

        <TextView
            style="@style/help_style_q"
            android:text="@string/help_q14" />

        <TextView
            style="@style/help_style_a"
            android:paddingRight="17dp"
            android:text="@string/help_a14" 
            android:layout_marginBottom="14dp"/>
    </LinearLayout>

</ScrollView>