<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/detail_activity_padding"
    android:paddingEnd="@dimen/detail_activity_padding"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="bottom"
        android:text="@string/password_input"/>

    <com.lesports.bike.settings.widget.PasswordInput
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </com.lesports.bike.settings.widget.PasswordInput>

    <TextView
        android:id="@+id/password_wrong_tip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="bottom"
        android:text="@string/password_not_match"
        android:textSize="13sp"
        android:visibility="invisible"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="42dp"
        android:stretchColumns="*" >
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/password_button_1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_1"/>
            <TextView
                android:id="@+id/password_button_2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_2"/>
            <TextView
                android:id="@+id/password_button_3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_3"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/password_button_4"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_4"/>
            <TextView
                android:id="@+id/password_button_5"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_5"/>
            <TextView
                android:id="@+id/password_button_6"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_6"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/password_button_7"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_7"/>
            <TextView
                android:id="@+id/password_button_8"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_8"/>
            <TextView
                android:id="@+id/password_button_9"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_9"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/password_button_cancel"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="17.8sp"/>
            <TextView
                android:id="@+id/password_button_0"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/password_table_font_size"
                android:text="@string/password_keyboard_0"/>
            <TextView
                android:id="@+id/password_button_delete"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/delete"
                android:textSize="17.8sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>