<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/detail_activity_padding"
    android:paddingEnd="@dimen/detail_activity_padding"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/lockscreen_password" />
        <com.lesports.bike.settings.widget.SwitchButton
            android:id="@+id/security_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" >
        </com.lesports.bike.settings.widget.SwitchButton>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="top"
        android:textSize="@dimen/font_smaller_than_standard"
        android:text="@string/lockscreen_password_tip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/colorGray"/>

    <TextView
        android:id="@+id/password_manager"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorGray"
        android:text="@string/password_manager"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/colorGray"/>

    <TextView
        android:id="@+id/fingerprint_manager"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorGray"
        android:text="@string/fingerprint_manager"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1sp"
        android:background="@color/colorGray"/>

</LinearLayout>
