<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2000000"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fingerprint2"
        android:layout_marginTop="94dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/fp_del_fp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="72.7dp">
        <TextView
            android:id="@+id/fp_del_cancel"
            android:layout_width="133dp"
            android:layout_height="46dp"
            android:background="@drawable/green_border"
            android:gravity="center"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/fp_del_confirm"
            android:layout_marginStart="13.3dp"
            android:layout_width="133dp"
            android:layout_height="46dp"
            android:background="@drawable/green_border"
            android:gravity="center"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>