<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGray5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choose_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17.7dp"
        android:layout_marginTop="13dp"
        android:text="@string/manual_set_time"
        android:textSize="21.3dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.3dp"
        android:layout_marginTop="20.3dp"
        android:background="@color/colorGreen" />

    <TimePicker
        android:id="@+id/new_set_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorGray5"
        android:calendarViewShown="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/choose_time_cancel_button"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray5"
            android:text="@string/cancel_date"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <Button
            android:id="@+id/choose_time_finish_button"
            android:layout_width="158dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray5"
            android:text="@string/finish_date"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
